<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"/>

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"/>

        <EditText
            android:id="@+id/editTextDepartment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/department"/>

        <EditText
            android:id="@+id/editTextRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/room"/>

        <Button
            android:id="@+id/buttonSavePatient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</ScrollView>
