<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextBPL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bpl"/>

        <EditText
            android:id="@+id/editTextBPH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bph"/>

        <EditText
            android:id="@+id/editTextTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/temperature"/>

        <Button
            android:id="@+id/buttonSubmitTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</ScrollView>
